--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,14 @@
   <meta name="viewport" content="width=device-width">
 
   <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
-  <!-- build:css(.tmp) styles/main.css -->
+  <!-- build:css({.tmp,app}) styles/main.css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
+  <!-- build:css({.tmp,app}) styles/print.css -->
   <link rel="stylesheet" href="styles/print.css" media="print">
+  <!-- endbuild -->
 
 </head>
 <body ng-app="fAct.app" ng-controller="MainCtrl">
