--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
-<script src="scripts/app.js"></script>
+<script src="scripts/app.build.js"></script>
 <script src="scripts/shared/services.js"></script>
 <script src="scripts/shared/filters.js"></script>
 <script src="scripts/shared/directives.js"></script>
