--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
 <script src="bower_components/moment/moment.js"></script>
 <script src="bower_components/moment/lang/fr.js"></script>
 <script src="bower_components/angular/angular.js"></script>
+<script src="/bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
