--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
   <!-- build:css({.tmp,app}) styles/main.css -->
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
+  <link rel="stylesheet" href="bower_components/angular-bootstrap-colorpicker/css/colorpicker.css" type="text/css" media="all" />
   <link rel="stylesheet" href="styles/main.css">
   <!-- endbuild -->
   <!-- build:css({.tmp,app}) styles/print.css -->
@@ -36,6 +37,7 @@
           <li ng-class="{active:isActive('/')}"><a href="#">Tableau de bord</a></li>
           <li ng-class="{active:isActive('/invoices')}"><a href="#/invoices">Factures</a></li>
           <li ng-class="{active:isActive('/clients')}"><a href="#/clients">Clients</a></li>
+          <li ng-class="{active:isActive('/planning')}"><a href="#/planning">Planning</a></li>
           <li><a href="" ng-click="logout()">Logout</a></li>
         </ul>
       </div><!--/.nav-collapse -->
@@ -53,11 +55,15 @@
 <script src="bower_components/moment/moment.js"></script>
 <script src="bower_components/moment/lang/fr.js"></script>
 <script src="bower_components/angular/angular.js"></script>
-<script src="/bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
+<script src="bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
 <script src="bower_components/angular-route/angular-route.js"></script>
 <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
+<script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="bower_components/angular-bootstrap-colorpicker/js/bootstrap-colorpicker-module.js"></script>
+<script src="bower_components/Chart.js/Chart.js"></script>
+<script src="bower_components/chartjs-directive/src/angular-chartjs-directive.js"></script>
 <!-- endbuild -->
 
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
@@ -68,6 +74,7 @@
 <script src="scripts/home/controllers.js"></script>
 <script src="scripts/invoice/controllers.js"></script>
 <script src="scripts/client/controllers.js"></script>
+<script src="scripts/planning/controllers.js"></script>
 <!-- endbuild -->
 
 </body>
