--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
         <a class="navbar-brand" href="#">fAct</a>
       </div>
       <div class="navbar-collapse collapse">
-        <ul  ng-show="user" class="nav navbar-nav navbar-right">
+        <ul ng-show="user" class="nav navbar-nav navbar-right">
           <li ng-class="{active:isActive('/')}"><a href="#">Tableau de bord</a></li>
           <li ng-class="{active:isActive('/invoices')}"><a href="#/invoices">Factures</a></li>
           <li ng-class="{active:isActive('/clients')}"><a href="#/clients">Clients</a></li>
@@ -46,9 +46,20 @@
 
   <div ng-show="user" class="container" ng-view></div>
 
-<script src='https://cdn.firebase.com/v0/firebase.js'></script>
-<script src='https://cdn.firebase.com/v0/firebase-simple-login.js'></script>
-<script type="text/javascript" src="https://login.persona.org/include.js"></script>
+  <div ng-hide="user" class="container">
+    <form class="form-signin" name="loginForm" ng-submit="login(loginForm)" novalidate>
+      <h2 class="form-signin-heading">Connexion</h2>
+      <input type="text" ng-model="attempt.email" required class="input-block-level" placeholder="Email address">
+      <input type="password" ng-model="attempt.password" required class="input-block-level" placeholder="Password">
+      <label class="checkbox">
+        <input type="checkbox" value="remember-me"> Remember me
+      </label>
+      <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+    </form>
+  </div>
+
+<script src="https://cdn.firebase.com/js/client/1.0.17/firebase.js"></script>
+<script src="https://cdn.firebase.com/js/simple-login/1.6.1/firebase-simple-login.js"></script>
 
 <!-- build:js({.tmp,app}) scripts/libs.js -->
 <script src="bower_components/lodash/dist/lodash.js"></script>
