--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,9 @@
           <li ng-class="{active:isActive('/planning')}"><a href="#/planning">Planning</a></li>
           <li><a href="" ng-click="logout()">Logout</a></li>
         </ul>
+        <ul ng-hide="user" class="nav navbar-nav navbar-right">
+          <li><a href="" ng-click="login()">Identification</a></li>
+        </ul>
       </div><!--/.nav-collapse -->
     </div>
   </div>
